[gd_scene load_steps=11 format=3 uid="uid://ba0rpqcw84arh"]

[ext_resource type="Script" path="res://assets/scripts/llamada.gd" id="1_ax2i4"]
[ext_resource type="PackedScene" uid="uid://dvj0n3qg13545" path="res://scenes/intro.tscn" id="2_uoad8"]
[ext_resource type="PackedScene" uid="uid://cbnwsfy1fenk7" path="res://scenes/interfaz_llamadas.tscn" id="3_r8blf"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCServer.gd" id="22_epe1x"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCReceiver.gd" id="23_bqfoa"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCClient.gd" id="24_ph7x7"]
[ext_resource type="Script" path="res://assets/scripts/osc_message.gd" id="25_pdlhb"]

[sub_resource type="Gradient" id="Gradient_qjtu3"]
offsets = PackedFloat32Array(0.955224, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ukweh"]
gradient = SubResource("Gradient_qjtu3")

[sub_resource type="CanvasTexture" id="CanvasTexture_snyqg"]
diffuse_texture = SubResource("GradientTexture1D_ukweh")

[node name="Main" type="Node"]
script = ExtResource("1_ax2i4")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_snyqg")

[node name="Intro" parent="." instance=ExtResource("2_uoad8")]
visible = false

[node name="InterfazLlamadas" parent="." instance=ExtResource("3_r8blf")]
visible = false

[node name="OSCServer" type="Node" parent="."]
script = ExtResource("22_epe1x")
port = 12345

[node name="OSCReceiver" type="Node" parent="OSCServer" node_paths=PackedStringArray("target_server")]
script = ExtResource("23_bqfoa")
target_server = NodePath("..")
osc_address = "/llamada"

[node name="OSCClient" type="Node" parent="."]
script = ExtResource("24_ph7x7")
port = 9000

[node name="OSCMessage" type="Node" parent="OSCClient" node_paths=PackedStringArray("target_client")]
script = ExtResource("25_pdlhb")
target_client = NodePath("..")
osc_address = "/inter"

[connection signal="linea_elegida" from="Intro" to="." method="_on_intro_linea_elegida"]
[connection signal="cambio_linea" from="InterfazLlamadas" to="." method="actualizar_llamada_en_curso"]
